who I am content organized

--- a/who-i-am.html
+++ b/who-i-am.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Varela+Round&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Carlos' portfolio</title>
+    <title>Carlos' portfolio - who I am</title>
 </head>
 <body id="who-i-am" class="who-i-am">
     <header>
@@ -30,24 +30,34 @@
     <div class="container">
         <main>
             <section id="#hero" class="hero">
-            </section>
-            <section id="me" class="who-i-am">
                 <h1>Who I am</h1>
-                <p>
-                    I'm from Colombia (South America), mixed from the afrocaribbean swing, arabic ancestry, and the kindness of the Hispanic/native breeding that enriched the universality of my region.
-
-I grew up humility as an average kid between Bogota (Colombia's capital) and many other cities and villages, including the Caribbean.
-
-I always liked languages, science, math and history, but also, I was good for sports, specially in Basketball.
-
-I had my first girlfriend from the States when I was 14, that helped me to speak better English, before living and sharing with Jamaicans and San Andres Islanders later.
-
-Always wanted to become part of the military forces, after trial and error, and painful experiences in different branches of the Navy and the Army, I became an officer in the reserve Corp.
-
-During those years in and out from the Navy processes, I achieved the seamen training to work overseas, a certificate in Krav maga and learned Arabic Fosha (able to read and write in aliphatic), lastly, I wanted to learn Russian in the same way (able to read Cyrillic), but I had to suspend to start my studies in Canada.
-
-I feel like I made many dreams that I had as a boy came true, not from one day to another, but with patience and wisdom, and during the journey, I see the value on the service to others, and to myself.
-                </p>
+                <img src="" alt="who I am hero image">
+            </section>
+            <section class="">
+                <img src="" alt="">
+                <p>I'm from Colombia (South America), mixed from the afrocaribbean swing, arabic ancestry, and the kindness of the Hispanic/native breeding that enriched the universality of my region.</p>
+            </section>
+            <section>
+                <img src="" alt="">
+                <p>I grew up humility as an average kid between Bogota (Colombia's capital), the Caribbean coast and islands.</p>
+            </section>
+            <section>
+                <img src="" alt="">
+                <p>I always liked languages, science, math and history, but also, I was good for sports, specially in Basketball.</p>
+            </section>
+                <img src="" alt="">
+                <p>I had my first girlfriend from the States when I was 14, that helped me to speak better English, before living and sharing with Jamaicans and San Andres Islanders later.</p>
+            <section>
+                <img src="" alt="">
+                <p>Always wanted to become part of the military forces, after trial and error, and painful experiences in different branches of the Navy and the Army, I became an officer in the reserve Corp.</p>
+            </section>
+            <section>
+                <img src="" alt="">
+                <p>During those years in and out from the Navy processes, I achieved the seamen training to work overseas, a certificate in Krav maga and learned Arabic Fosha (able to read and write in aliphatic), lastly, I wanted to learn Russian in the same way (able to read Cyrillic), but I had to suspend to start my studies in Canada.</p>
+            </section>
+            <section>
+                <img src="" alt="">
+                <p>I feel like I made many dreams that I had as a boy came true, not from one day to another, but with patience and wisdom, and during the journey, I see the value on the service to others, and to myself.</p>
             </section>      
 
         </main>
