--- a/who-i-am.html
+++ b/who-i-am.html
@@ -31,34 +31,40 @@
         <main>
             <section id="#hero" class="hero">
                 <h1>Who I am</h1>
-                <img src="" alt="who I am hero image">
+                <img src="images/photos/profile-2.jpg" alt="who I am hero image">
             </section>
             <section class="">
-                <img src="" alt="">
+                <img src="images/photos/mom.jpg" alt="Carlos with mom">
                 <p>I'm from Colombia (South America), mixed from the afrocaribbean swing, arabic ancestry, and the kindness of the Hispanic/native breeding that enriched the universality of my region.</p>
             </section>
             <section>
-                <img src="" alt="">
+                <img src="images/photos/childhood.png" alt="childhood">
                 <p>I grew up humility as an average kid between Bogota (Colombia's capital), the Caribbean coast and islands.</p>
             </section>
             <section>
-                <img src="" alt="">
+                <img src="images/photos/dad.JPG" alt="Carlos with dad">
                 <p>I always liked languages, science, math and history, but also, I was good for sports, specially in Basketball.</p>
             </section>
-                <img src="" alt="">
-                <p>I had my first girlfriend from the States when I was 14, that helped me to speak better English, before living and sharing with Jamaicans and San Andres Islanders later.</p>
             <section>
-                <img src="" alt="">
+                <img src="images/photos/sf.jpg" alt="Carlos in california">
+                <p>I had my first girlfriend from the States when I was 14, that helped me to speak better English, before living and sharing with Jamaicans and San Andres Islanders later.</p>
+            </section>
+            <section>
+                <img src="images/photos/military.jpg" alt="Carlos in uniform">
                 <p>Always wanted to become part of the military forces, after trial and error, and painful experiences in different branches of the Navy and the Army, I became an officer in the reserve Corp.</p>
             </section>
             <section>
-                <img src="" alt="">
+                <img src="images/photos/kmg.jpg" alt="Carlos with dad">
                 <p>During those years in and out from the Navy processes, I achieved the seamen training to work overseas, a certificate in Krav maga and learned Arabic Fosha (able to read and write in aliphatic), lastly, I wanted to learn Russian in the same way (able to read Cyrillic), but I had to suspend to start my studies in Canada.</p>
             </section>
             <section>
-                <img src="" alt="">
+                <img src="images/photos/ny.jpg" alt="Carlos in NY">
                 <p>I feel like I made many dreams that I had as a boy came true, not from one day to another, but with patience and wisdom, and during the journey, I see the value on the service to others, and to myself.</p>
-            </section>      
+            </section>
+            <section>
+                <img src="images/photos/family.jpg" alt="Carlos with family">
+                <p>Now I have a family life, sharing experiences together and projecting a future as a family in Canada.</p>
+            </section>       
 
         </main>
     </div>
