--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <main>
             <section id="#hero" class="hero">
                 <h1>If you can imagine it,<br>I can do it</h1>
-                <img class="profile-picture" src="images/photos/profile-Carlos-Suarez.jpg" alt="profile carlos suarez">
+                <img class="profile-picture" src="images/photos/profile-Carlos-Suarez.webp" alt="profile carlos suarez">
             </section>
 
             <section id="summary" class="summary">
