--- a/case-study.html
+++ b/case-study.html
@@ -30,15 +30,14 @@
     <div class="container">
         <main>
             <section id="#hero" class="hero">
-                <img src="images/photos/case-study.jpg" alt="Carlos with peers">
+                <img src="images/photos/case-study.webp" alt="Carlos with peers">
                 <h1>Case Study</h1>
             </section>
-            <section id="case-study" class="case-study">
+            <section>
                 <h2>Situation</h2> 
                 <p>During the COVID, the client archived the web project my team worked in for years as a frontend team leader. There were massive layoffs and only a couple of the team including me were transferred to the main application team.</p>
             </section>
             <section>
-
             </section>
             <section>
                 <h2>Task</h2>
@@ -49,13 +48,13 @@
                 <p>As soon I was assigned with this task, I requested help from the base company to have a mentor in this technology, who I can create an schedule, milestones and a deadline with.</p>
             </section>
             <section>
-                <h2>Cooperation</h2>
-                <img src="images/photos/peers.jpg" alt="Carlos' peers">
+                <h2>Support</h2>
+                <img src="images/photos/peers.webp" alt="Carlos' peers">
                 <p>Many colleagues tried to support me with tons of documentation, but I knew the metacognition leaning roadmap starts from teasing our brains with the practical (creating the challenge by doing), and understanding the principles by teaching.</p>
             </section>
             <section>
-                <h2>Support</h2>
-                <img src="images/photos/mentor.jpg" alt="Carlos with mentors">
+                <h2>Mentoring</h2>
+                <img src="images/photos/mentor.webp" alt="Carlos with mentors">
                 <p>The exchange experience with this very professional mentor, enabled the heuristics by:</p>
                 <ul>
                     <li>Finding similarities in backend and frontend languages</li>
@@ -67,7 +66,7 @@
             </section>
             <section>
                 <h2>Result</h2>
-                <img src="images/photos/result.jpg" alt="Carlos with clients">
+                <img src="images/photos/result.webp" alt="Carlos with clients">
                 <p>Although the initial estimate was overlapped by a couple of weeks, the resulting skill set obtained was long-lasting. <br><br> As achievement we not only reduced the dependency in other peers to finish the features, but also, brought value by adding features such as:</p>
                 <ul>
                     <li>Unit testing coverage</li>
