--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 
             <section id="summary" class="summary">
                 <h2>Summary</h2>
-                <p>With the experience gained as software engineer from 2008, I can help you to build your website or application faster with the highest standards and best practices</p>
-                <p>The process is the key, so providing you with the best code coverage, version control tools and early prototypes ensures we point to the desired direction</p>
-                <p>I'm currently broaden my skills and experience in A.I., automation, GIS, media production, product management and UX/UI design</p>
+                <p>Leveraging my extensive background as a software engineer since 2008, I help clients accelerate the development of their websites and applications, ensuring they meet the highest standards.</p>
+                <p>My approach emphasizes a strong process, utilizing tools like code coverage, version control, and rapid prototyping to guarantee alignment with project goals. Committed to continuous growth, I am currently broadening my skills in cutting-edge areas including AI, automation, GIS, media production, product management, and UX/UI design.</p>
             </section>
 
             <section id="services" class="services">
