--- a/who-i-am.html
+++ b/who-i-am.html
@@ -27,6 +27,7 @@
             </ul>
         </nav>
     </header>
+
     <div class="container">
         <main>
             <section id="#hero" class="hero">
@@ -35,37 +36,36 @@
             </section>
             <section class="">
                 <img src="images/photos/mom.webp" alt="Carlos with mom">
-                <p>I'm from Colombia (South America), mixed from the afrocaribbean swing, arabic ancestry, and the kindness of the Hispanic/native breeding that enriched the universality of my region.</p>
+                <p>Hailing from Colombia, my identity is shaped by a rich blend of Afro-Caribbean vibrancy, Arabic ancestry, and the profound Hispanic/Indigenous heritage that enriches my region's universal spirit.</p>
             </section>
             <section>
-                <img src="images/photos/childhood.png" alt="childhood">
-                <p>I grew up humility as an average kid between Bogota (Colombia's capital), the Caribbean coast and islands.</p>
+                <img src="images/photos/childhood.webp" alt="childhood">
+                <p>My upbringing instilled a deep sense of humility as I grew up, experiencing life as an average kid across diverse Colombian landscapes, from the vibrant capital Bogotá to the serene Caribbean coast and its islands.</p>
             </section>
             <section>
                 <img src="images/photos/dad.webp" alt="Carlos with dad">
-                <p>I always liked languages, science, math and history, but also, I was good for sports, specially in Basketball.</p>
+                <p>Early on, I cultivated a strong interest in languages, science, mathematics, and history, balanced by a natural aptitude for sports, especially basketball.</p>
             </section>
             <section>
                 <img src="images/photos/sf.webp" alt="Carlos in california">
-                <p>I had my first girlfriend from the States when I was 14, that helped me to speak better English, before living and sharing with Jamaicans and San Andres Islanders later.</p>
+                <p>My early immersion in diverse cultures, including interactions with individuals from the United States, as well as living alongside Jamaican and San Andrés Islanders, significantly honed my English proficiency and cross-cultural communication skills.</p>
             </section>
             <section>
                 <img src="images/photos/military.webp" alt="Carlos in uniform">
-                <p>Always wanted to become part of the military forces, after trial and error, and painful experiences in different branches of the Navy and the Army, I became an officer in the reserve Corp.</p>
+                <p>Driven by a lifelong aspiration to serve, I pursued a path in the military. Through perseverance and commitment across various branches of the Navy and Army, I proudly became an officer in the Reserve Corps.</p>
             </section>
             <section>
                 <img src="images/photos/kmg.webp" alt="Carlos with dad">
-                <p>During those years in and out from the Navy processes, I achieved the seamen training to work overseas, a certificate in Krav maga and learned Arabic Fosha (able to read and write in aliphatic), lastly, I wanted to learn Russian in the same way (able to read Cyrillic), but I had to suspend to start my studies in Canada.</p>
+                <p>Alongside my military journey, I attained seaman training and a certificate in Krav Maga. My dedication to lifelong learning is evident in my proficiency in Arabic (Fusha), allowing me to read and write in its script, and my foundational understanding of the Cyrillic script, though further study was suspended to begin my academic pursuits in Canada.</p>
             </section>
             <section>
                 <img src="images/photos/ny.webp" alt="Carlos in NY">
-                <p>I feel like I made many dreams that I had as a boy came true, not from one day to another, but with patience and wisdom, and during the journey, I see the value on the service to others, and to myself.</p>
+                <p>Reflecting on my path, I've seen many childhood dreams come to fruition, achieved not overnight, but through patience and wisdom. This journey has profoundly deepened my understanding of the value in serving others and in continuous self-development.</p>
             </section>
             <section>
                 <img src="images/photos/family.webp" alt="Carlos with family">
-                <p>Now I have a family life, sharing experiences together and projecting a future as a family in Canada.</p>
+                <p>Today, I am building a fulfilling family life in Canada, sharing new experiences and enthusiastically projecting our future together</p>
             </section>       
-
         </main>
     </div>
     
