--- a/case-study.html
+++ b/case-study.html
@@ -63,8 +63,8 @@
                 <p>Despite the initial estimate being exceeded by only two weeks, the foundational skillset acquired proved highly sustainable and impactful.</p>
                 <p>As a direct result, I not only significantly reduced the team's dependency on other peers for feature completion but also added substantial value by implementing key improvements, including:</p>
                 <ul>
-                    <li>Comprehensive unit testing coverage</li>
-                    <li>Strategic use of Lambda functions</li>
+                    <li>Comprehensive unit testing coverage to 70%</li>
+                    <li>Strategic use of Lambda functions in 2 projects</li>
                     <li>Applying Inversion of Control (IoC) principles</li>
                 </ul>
                 <p>These additions, alongside other strategic architectural improvements, simplified our codebase, enhanced readability, reduced technical debt, and improved overall maintainability.</p>
