adjusted styling responsive

--- a/who-i-am.html
+++ b/who-i-am.html
@@ -35,34 +35,42 @@
                 <img src="images/photos/profile-2.webp" alt="who I am hero image">
             </section>
             <section class="">
+                <h2>Roots and Heritage</h2>
                 <img src="images/photos/mom.webp" alt="Carlos with mom">
                 <p>Hailing from Colombia, my identity is shaped by a rich blend of Afro-Caribbean vibrancy, Arabic ancestry, and the profound Hispanic/Indigenous heritage that enriches my region's universal spirit.</p>
             </section>
             <section>
+                <h2>Formative Years</h2>
                 <img src="images/photos/childhood.webp" alt="childhood">
                 <p>My upbringing instilled a deep sense of humility as I grew up, experiencing life as an average kid across diverse Colombian landscapes, from the vibrant capital Bogotá to the serene Caribbean coast and its islands.</p>
             </section>
             <section>
+                <h2>Early Interests</h2>
                 <img src="images/photos/dad.webp" alt="Carlos with dad">
                 <p>Early on, I cultivated a strong interest in languages, science, mathematics, and history, balanced by a natural aptitude for sports, especially basketball.</p>
             </section>
             <section>
+                <h2>Cultural Exchange and Skills</h2>
                 <img src="images/photos/sf.webp" alt="Carlos in california">
                 <p>My early immersion in diverse cultures, including interactions with individuals from the United States, as well as living alongside Jamaican and San Andrés Islanders, significantly honed my English proficiency and cross-cultural communication skills.</p>
             </section>
             <section>
+                <h2>Military Service</h2>
                 <img src="images/photos/military.webp" alt="Carlos in uniform">
                 <p>Driven by a lifelong aspiration to serve, I pursued a path in the military. Through perseverance and commitment across various branches of the Navy and Army, I proudly became an officer in the Reserve Corps.</p>
             </section>
             <section>
+                <h2>Continued Learning and Development</h2>
                 <img src="images/photos/kmg.webp" alt="Carlos with dad">
                 <p>Alongside my military journey, I attained seaman training and a certificate in Krav Maga. My dedication to lifelong learning is evident in my proficiency in Arabic (Fusha), allowing me to read and write in its script, and my foundational understanding of the Cyrillic script, though further study was suspended to begin my academic pursuits in Canada.</p>
             </section>
             <section>
+                <h2>Reflections and Growth</h2>
                 <img src="images/photos/ny.webp" alt="Carlos in NY">
                 <p>Reflecting on my path, I've seen many childhood dreams come to fruition, achieved not overnight, but through patience and wisdom. This journey has profoundly deepened my understanding of the value in serving others and in continuous self-development.</p>
             </section>
             <section>
+                <h2>Life in Canada</h2>
                 <img src="images/photos/family.webp" alt="Carlos with family">
                 <p>Today, I am building a fulfilling family life in Canada, sharing new experiences and enthusiastically projecting our future together</p>
             </section>       
